--- a/.classpath
+++ b/.classpath
@@ -30,10 +30,12 @@
 	<classpathentry kind="lib" path="lib/core-0.26.jar"/>
 	<classpathentry kind="lib" path="lib/equation-0.26.jar"/>
 	<classpathentry kind="lib" path="lib/native_system-java-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/tsne.jar"/>
+	<classpathentry kind="lib" path="lib/tsne.jar" sourcepath="C:/Users/jcankudi/Downloads/T-SNE-Java-master"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-common-1.8.1.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-forms-1.8.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="lib/jcommon-1.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
