--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/hierarchy_measures"]
-	path = submodules/hierarchy_measures
-	url = https://github.com/Jakub-Cc/hierarchy_measures.git
+[submodule "submodules/hkplusplus"]
+	path = submodules/hkplusplus
+	url = https://github.com/Jakub-Cc/hkplusplus
